processor/src/test/resources/errors/ArgFieldInNonActivity.java
package errors;

import com.kboyarshinov.activityscreens.annotation.ActivityArg;

public class ArgFieldInNonActivity {
    @ActivityArg
    int field;
}